some refactoring (#223)